# resume-system

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/resume/: admin.py  models.py  serializers.py  urls.py  views.py
apps/resume/migrations/: 0001_initial.py
apps/tests/: tests_auth.py  tests_resume.py
apps/tests/tests_http/: auth.http  resume.http
apps/users/: permissions.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py  yasg.py
